design issue on safari

--- a/src/components/dashboard.scss
+++ b/src/components/dashboard.scss
@@ -1,7 +1,7 @@
-@import "~./constants.scss";
+@import '~./constants.scss';
 
 .dashboard {
-  margin-top: 90px;
+  padding-top: 90px;
   min-height: 100vh;
   background: $beige;
 }
